# Robotics

./: .gitignore  Link6.stl:Zone.Identifier  README.md
Arduino_Code/AR3/: AR3.ino
Arduino_Code/AR3_ROSController/: AR3_ROSController.ino
Arduino_Code/Motor_Class/: Motor_Class.ino
Arduino_Code/Teensy_Testing/: Teensy_Testing.ino
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/ar3/: build.check.004.log.stderr  (+1 more)
src/ar3/: CMakeLists.txt  package.xml  setup.py
src/ar3/launch/: ar3.launch  ar3_config.rviz  ar3_rviz.launch
src/ar3/msg/: ar3_control.msg  ar3_feedback.msg
src/ar3/scripts/: 2pose_Movement.py  ar3_controller.ui  ar3_ui.py  gotoAngle.py  joint_controller.ui  joyControl.py  pose_controller.ui
src/ar3/src/ar3/: GCodeGenerator.py  JoyControlClass.py  RobotControllerClass.py  ar3_ui.py  gotoAngle.py  joyControl.py
src/ar3/src/ar3/programs/: test.txt
src/ar3/src/ar3/ui/: ar3_controller.ui  dark_theme_pallet.xml  joint_controller.ui  pose_controller.ui
src/ar3/urdf/: AR3.xacro  AR3_Empty.xacro  AR3_Pedestal.xacro  AR3_Shelving.xacro  AR3_noGazebo.urdf  AR3_noGazebo.xacro  ar3.urdf  ar3.xacro
src/ar3/urdf/meshes/: Base.dae  Base.dae:Zone.Identifier  Link1.dae  Link1.dae:Zone.Identifier  Link2.dae  Link2.dae:Zone.Identifier  Link3.dae  Link3.dae:Zone.Identifier  Link4.dae  Link4.dae:Zone.Identifier  Link5.dae  Link5.dae:Zone.Identifier  Link6.dae  Link6.dae:Zone.Identifier  Link6.stl  ParallelGripper.stl:Zone.Identifier  gripper.dae:Zone.Identifier
(+201 files in other folders)
